@@ -1,0 +1,5 @@
+<html>
+<head>
+<META HTTP-EQUIV="Refresh" CONTENT="0; URL=@RWVER@.exe">
+<body></body>
+
